<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_description">Weather widget showing detailed 24-hour forecasts in a 4x1 format.</string>
    <string name="widget_name" translatable="false">AF Weather</string>
    <string name="widget_loading">Loading AF...</string>
    <string name="device_profile_guide_link" translatable="false">&lt;a href=\"https://github.com/Gitsaibot/AF-Weather-Widget/wiki/Device-Profiles/\"&gt;Device Profile Guide&lt;/a&gt;</string>
	<string name="quick_start">Quick Start</string>
	<string name="temperature_graph">Temperature graph</string>
	<string name="precipitation">Precipitation</string>
	<string name="top_bar_information">Top bar information</string>
	<string name="noaa">NOAA NWS data</string>
	<string name="intro_text">After installing AF, you must manually add the widget to your homescreen: When setting up a widget for the first time, the only thing which needs to be chosen is the location to view. The most recently saved settings will be used automatically when setting up a new widget. </string>
	<string name="temperature_graph_text">The temperature graph shows the temperature for the coming 24 hours, starting at the next full hour from the current time. NB:
		For areas where data is only available in 3-hour intervals, the time axis will be aligned to match the available data.\n
	</string>
	<string name="precipitation_text">Precipitation is shown as blue bars, where the height of the bar indicates the amount of precipitation.
		Each grid cell is a given amount of precipitation, as indicated in the top bar. Normally, each cell will be 1 mm, or 0.05 inches.
		This means that a bar which is four cells high equates to four millimetres, or 0.2 inches of precipitation.\n

		\nTo indicate the maximum and minimum amount of forecasted precipitation, both filled bars and patterned bars are used.
		Patterned blue bars indicate the maximum amount of precipitation, while the filled blue bars indicate the minimum amount of precipitation.
	</string>
	<string name="top_bar_information_text">The top bar of the widget is used to indicate information for the current time.\n

    	\n\u2022 Mean-Sea-Level-Pressure (MSLP) is given in hectopascals (SI), which is equivalent to the millibar.
    	\n\u2022 Relative Humidity (RH) is given as a percentage.
    	\n\u2022 The number to the right of the relative humidity is the precipitation scaling, as described in the previous paragraph.
    	\n\u2022 The number in the parenthesis after the location name indicates the current temperature at that location.
	</string>
	<string name="noaa_nws_data_text">NOAA NWS data should improve the forecasts available to US users,
		compared to what was previously available from the Norwegian Meteorological Institute.
		A few differences between the two sources means that:\n

    	\n\u2022 Only precipitation amounts are available, maximum/minimum levels are not.
    	\n\u2022 Pressure data is not available.
    	\n\u2022 The time between samples varies from 1 to 6 hours.\n

		\nYou can select the weather data source manually from the update settings within the AF configuration.
	</string>
	<string name="pressure_top" translatable="false">MSLP: %1$.0f hPa</string>
	<string name="pressure_top_short" translatable="false">%1$.0f hPa</string>
	<string name="humidity_top" translatable="false">RH: %1$.0f%%</string>
	<string name="humidity_top_short" translatable="false">%1$.0f%%</string>
	<string name="rain_scale_format" translatable="false">0.###</string>
	<string name="rain_scale_top" translatable="false">%1$s %2$s</string>
	<string name="rain_scale_unit_inches" translatable="false">in</string>
	<string name="rain_scale_unit_mm" translatable="false">mm</string>
	<string name="temperature_format" translatable="false">0.#</string>
	<string name="temperature_unit_fahrenheit" translatable="false">\u00B0F</string>
	<string name="temperature_unit_celsius" translatable="false">\u00B0C</string>
	<string name="temperature_top" translatable="false">(%1$s%2$s)</string>
	<string name="location_settings_title">Select Location</string>
	<string name="location_settings_key" translatable="false">select_location</string>
	<string name="button_add_location">Add location</string>
	<string name="location_list_row_latitude">Latitude:</string>
	<string name="location_list_row_longitude">Longitude:</string>
	<string name="location_list_context_title">Location: %s</string>
	<string name="location_list_context_edit">Edit display title</string>
 	<string name="location_list_context_delete">Delete</string>
 	<string name="invalid_search_input_toast">Invalid search input, please try a different search!</string>
 	<string name="location_search_results_select_dialog_title">Select a location</string>
 	<string name="location_search_no_results">No results found, please try a different search!</string>
 	<string name="location_empty_search_string_toast">Error: Empty search string.</string>
	<string name="location_search_progress_dialog_title">Please wait...</string>
 	<string name="location_search_progress_dialog_message">Searching...</string>
 	<string name="location_search_no_connection_toast">Error: No internet connection</string>
	<string name="location_search_error_toast">An error occurred during search.</string>
	<string name="location_search_over_query_limit_toast">Daily search quota filled for your IP address. Try changing to WiFi.</string>
	<string name="location_search_request_denied_toast">Error: Search request denied</string>
	<string name="location_search_invalid_request_toast">Error: Invalid search request</string>
 	<string name="widget_no_weather_data">No weather data found.</string>
 	<string name="widget_failed_to_draw">Failed to draw widget</string>
	<string name="must_select_location">You must set a location</string>
	<string name="title_configure">AF Weather: Configure widget</string>
	<string name="button_add_widget_label">Add widget</string>
	<string name="location_selector_no_items_title">No locations added</string>
	<string name="dialog_search_location">Search for location</string>
	<string name="dialog_color_alpha">Alpha:</string>
	<string name="dialog_color_code">HTML color code:</string>
	<string name="input_hex_color">Input Hex Color</string>
	<string name="select_color">Select Color</string>
	<string name="color_picker">Color Picker</string>
	<string name="hex_input">Hex Input</string>
	<string name="apply_changes">Apply Changes</string>
	<string name="add_widget">Add Widget</string>
	<string name="unit_settings_title">Measurement Units</string>
	<string name="unit_settings_summary">Set measurement units and rain scaling</string>
	<string name="temperature_units_title">Temperature Unit</string>
	<string name="precipitation_units_title">Precipitation Unit</string>
	<string name="precipitation_scaling_title_mm">Millimeters per cell</string>
	<string name="ui_settings_title">UI Settings</string>
	<string name="ui_settings_summary">Modify widget appearance</string>
	<string name="ui_settings_category_widget">Widget settings</string>
	<string name="background_color_title">Background color</string>
	<string name="pattern_color_title">Pattern color</string>
	<string name="text_color_title">Text color</string>
	<string name="top_text_visibility_title">Top text visibility</string>
	<string name="ui_settings_category_border">Border settings</string>
	<string name="border_enabled_title">Widget border</string>
	<string name="border_enabled_summary_on">Border enabled</string>
	<string name="border_enabled_summary_off">Border disabled</string>
	<string name="border_color_title">Border color</string>
	<string name="border_thickness_title">Border thickness</string>
	<string name="border_rounding_title">Widget edge rounding</string>
	<string name="ui_settings_category_day_effect">Daylight effect</string>
	<string name="day_effect_title">Day/night effect</string>
	<string name="day_effect_summary_on">Background effect enabled</string>
	<string name="day_effect_summary_off">Background effect disabled</string>
	<string name="day_color_title">Day background</string>
	<string name="night_color_title">Night background</string>
	<string name="ui_settings_category_grid">Grid colors</string>
	<string name="grid_color_title">Grid color</string>
	<string name="grid_outline_color_title">Grid outline color</string>
	<string name="ui_settings_category_indicator">Indicator colors</string>
	<string name="max_rain_color_title">Maximum rain</string>
	<string name="min_rain_color_title">Minimum rain</string>
	<string name="above_freezing_color_title">Above freezing</string>
	<string name="below_freezing_color_title">Below freezing</string>
	<string name="system_settings_title">Update Settings</string>
	<string name="system_settings_summary">These settings are applied to all widgets</string>
	<string name="provider_title">Data source</string>
	<string name="awake_only_title">Only when awake</string>
	<string name="awake_only_summary_on">The device will not be awoken to update weather data.</string>
	<string name="awake_only_summary_off">Weather data will be updated even when the device is sleeping.</string>
	<string name="wifi_only_title">WiFi only</string>
	<string name="wifi_only_summary_on">Weather data will only be updated when a WiFi connection is active.</string>
	<string name="wifi_only_summary_off">Weather data will be updated using any connection type.</string>
	<string name="update_rate_title">Update rate</string>
	<string name="update_rate_summary">Adjust how often weather data will be retrieved</string>
	<string name="device_profiles_title">Device Profiles</string>
	<string name="device_profiles_summary">Set device specific widget dimensions</string>
	<string name="temperature_units_string" translatable="false">temperature_units_string</string>
    <string name="precipitation_units_string" translatable="false">precipitation_units_string</string>
    <string name="precipitation_scaling_string" translatable="false">rain_scale_string</string>
    <string name="top_text_visibility_string" translatable="false">top_text_visibility_string</string>
    <string name="border_enabled_bool" translatable="false">border_enabled_bool</string>
    <string name="border_color_int" translatable="false">border_color_int</string>
    <string name="border_thickness_string" translatable="false">border_thickness_string</string>
    <string name="border_rounding_string" translatable="false">border_rounding_string</string>
	<string name="background_color_int" translatable="false">background_color_int</string>
	<string name="text_color_int" translatable="false">text_color_int</string>
	<string name="pattern_color_int" translatable="false">pattern_color_int</string>
	<string name="day_effect_bool" translatable="false">day_effect_bool</string>
	<string name="day_color_int" translatable="false">day_color_int</string>
	<string name="night_color_int" translatable="false">night_color_int</string>
	<string name="grid_color_int" translatable="false">grid_color_int</string>
	<string name="grid_outline_color_int" translatable="false">grid_outline_color_int</string>
	<string name="max_rain_color_int" translatable="false">max_rain_color_int</string>
	<string name="min_rain_color_int" translatable="false">min_rain_color_int</string>
	<string name="above_freezing_color_int" translatable="false">above_freezing_color_int</string>
	<string name="below_freezing_color_int" translatable="false">below_freezing_color_int</string>
	<string name="preference_provider_string" translatable="false">global_temp_provider_string</string>
	<string name="preference_awake_only_bool" translatable="false">global_temp_awake_only_bool</string>
	<string name="preference_wifi_only_bool" translatable="false">global_temp_wifi_only_bool</string>
	<string name="preference_update_rate_string" translatable="false">global_temp_update_rate_string</string>
</resources>